Added Users to database/Implemented GitHub Login
